k8s/strapi/development/strapi-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: strapi
  namespace: development
  labels:
    app: strapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: strapi
  template:
    metadata:
      labels:
        app: strapi
    spec:
      containers:
        - name: strapi
          image: vanevel/strapi-app:latest
          ports:
            - containerPort: 1337
          volumeMounts:
            - name: user-data
              mountPath: /srv/app/public/uploads
      volumes:
        - name: user-data
          persistentVolumeClaim:
            claimName: strapi-dev-pvc
