k8s/strapi/development/strapi-ingress-route.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: strapi-dev-ingress-route
  namespace: web
spec:
  entryPoints:
    - websecure
  routes:
    - match: PathPrefix(`/dev/strapi`)
      kind: Rule
      middlewares:
        - name: redirect-to-https
        - name: strapi-prefix-strip
      services:
        - name: strapi-service
          namespace: development
          port: 80
  tls:
    secretName: web-cert-secret
